# webgl2bug

./: CMakeLists.txt  README.md  build_web_bug  main.c
build_web_bug/: index.js  index.wasm
build_web_ok/: index.wasm  readme.md
